<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spring 2015 Expo App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="expo_introduction">Welcome to the Spring 2015 Poster Expo</string>
    <string name="start_tour_button_text">Start Tour</string>
    <string name="title_activity_team_info">TeamInfoActivity</string>
    <string name="title_activity_student_info">StudentInfoActivity</string>
    <string name="project_name_text">Website Remodel Group</string>
    <string name="project_description_text">In this project we remodeled the website for the college of science! The technologies we used were Javascript, HTML, and CSS. We also learned to use the AGILE method. It was a lot of fun!</string>
    <string name="view_group_members_text">View Group Members</string>
    <string name="star_description_text">Description of stars</string>
    <string name="submit_rating_text">Submit Rating</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_favorites">FavoritesActivity</string>

</resources>
